force-app/main/default/objects/Application_Deleted_Policies__c/Application_Deleted_Policies__c.object-meta.xml
<CustomObject>
    <label>פוליסה לביטול/ניוד</label>
    <nameField>
        <displayFormat>DP-{0000000}</displayFormat>
        <label>Application Deleted Policy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>פוליסות לביטול/ניוד</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>