force-app/main/default/objects/Application_Deleted_Policies__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>AgentWise_IL__Application__c</referenceTo>
    <relationshipName>Application_Policies_To_Delete</relationshipName>
    <type>Lookup</type>
</CustomField>