force-app/main/default/objects/Application_Deleted_Policies__c/fields/Application_Pens__c.field-meta.xml
<CustomField>
    <fullName>Application_Pens__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Pens</label>
    <referenceTo>AgentWise_IL__Application__c</referenceTo>
    <relationshipName>ApplicationPens</relationshipName>
    <type>Lookup</type>
</CustomField>