force-app/main/default/objects/Application_Deleted_Policies__c/fields/Cancel_Policy_Request__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Policy_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancel Policy Request</label>
    <referenceTo>AgentWise_IL__Service_Request__c</referenceTo>
    <relationshipName>Application_Policies_To_Delete</relationshipName>
    <type>Lookup</type>
</CustomField>