force-app/main/default/objects/Application_Deleted_Policies__c/fields/Cancel_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Type__c</fullName>
    <label>Cancel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ביטול יזום של הסוכנות</fullName>
            </value>
            <value>
                <fullName>ביטול על ידי נספח ג</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>