force-app/main/default/objects/Application_Deleted_Policies__c/fields/Expected_Niud_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Niud_Date__c</fullName>
    <label>Expected Niud Date</label>
    <type>Date</type>
</CustomField>