force-app/main/default/objects/Application_Deleted_Policies__c/fields/Extern_Policy_To_Be_Deleted_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Extern_Policy_To_Be_Deleted_Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extern Policy To Be Deleted Carrier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Carrier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>פוליסות לביטול/ניוד</relationshipLabel>
    <relationshipName>Application_Policies_To_Delete</relationshipName>
    <type>Lookup</type>
</CustomField>