force-app/main/default/objects/Application_Deleted_Policies__c/fields/Extern_Policy_To_Be_Deleted_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Extern_Policy_To_Be_Deleted_Carrier_Name__c</fullName>
    <formula>IF(NOT(ISBLANK( Extern_Policy_To_Be_Deleted_Carrier__c)),
Extern_Policy_To_Be_Deleted_Carrier__r.Name,
Policy__r.AgentWise_IL__Carrier__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extern Policy To Be Deleted Carrier Name</label>
    <type>Text</type>
</CustomField>