force-app/main/default/objects/Application_Deleted_Policies__c/fields/Extern_Policy_To_Be_Deleted_Number__c.field-meta.xml
<CustomField>
    <fullName>Extern_Policy_To_Be_Deleted_Number__c</fullName>
    <label>Extern Policy To Be Deleted Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>