force-app/main/default/objects/Application_Deleted_Policies__c/fields/NiudStatus__c.field-meta.xml
<CustomField>
    <fullName>NiudStatus__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK( Cancel_Policy_Request__c )),
ISPICKVAL(Cancel_Policy_Request__r.AgentWise_IL__Status__c,&quot;Closed&quot;)),
&quot;סגור&quot;,
IF(
AND(
NOT(ISBLANK( Cancel_Policy_Request__c )),
ISPICKVAL (Cancel_Policy_Request__r.AgentWise_IL__Status__c,&quot;Canceled Niud&quot;)),
&quot;ניוד בוטל&quot;,
IF(
AND(
ISBLANK( Cancel_Policy_Request__c ),
ISPICKVAL ( Cancel_Type__c,&quot;ביטול על ידי נספח ג&quot;)),
&quot;סגור&quot;,
IF(
AND(
NOT(ISBLANK( Cancel_Policy_Request__c )),
ISPICKVAL (Cancel_Policy_Request__r.AgentWise_IL__Status__c,&quot;Customer Regret&quot;)),
&quot;לקוח התחרט&quot;,
IF(ISBLANK( Cancel_Policy_Request__c ),
&quot;טרם נפתח&quot;,
&quot;פתוח&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NiudStatus</label>
    <type>Text</type>
</CustomField>