force-app/main/default/objects/Application_Deleted_Policies__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>AgentWise_IL__Policy__c</referenceTo>
    <relationshipName>Application_Policies_To_Delete</relationshipName>
    <type>Lookup</type>
</CustomField>