force-app/main/default/objects/Application_Deleted_Policies__c/fields/Search_Application_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Search_Application_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Search Application Lookup</label>
    <referenceTo>AgentWise_IL__Application__c</referenceTo>
    <relationshipName>ApplicationsPoliciesCancel</relationshipName>
    <type>Lookup</type>
</CustomField>