force-app/main/default/objects/Application_Deleted_Policies__c/fields/Sr_Sla_Date__c.field-meta.xml
<CustomField>
    <fullName>Sr_Sla_Date__c</fullName>
    <formula>Cancel_Policy_Request__r.SLA_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sr Sla Date</label>
    <type>Date</type>
</CustomField>