force-app/main/default/objects/Application_Deleted_Policies__c/fields/Start_Cancel_Niud_Manually__c.field-meta.xml
<CustomField>
    <fullName>Start_Cancel_Niud_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Cancel Niud Manually</label>
    <type>Checkbox</type>
</CustomField>