force-app/main/default/objects/Application_Deleted_Policies__c/validationRules/ApplicationIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ApplicationIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.Novidea_HPC__Trigger__c.Novidea_HPC__Stop_Validation_Rule__c != True,
OR(
AND(
ISBLANK( Application__c ),
ISBLANK( Application_Pens__c )),
AND(
NOT(ISBLANK( Application__c )),
NOT(ISBLANK( Application_Pens__c )))))</errorConditionFormula>
    <errorMessage>פוליסה לביטול/קופה לניוד חייבת להיות מקושרת להצעת פרט או הצעה פנסיונית, בהתאמה</errorMessage>
</ValidationRule>