force-app/main/default/objects/Application_Deleted_Policies__c/validationRules/ApplicationPensExpectedDateIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ApplicationPensExpectedDateIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.Novidea_HPC__Trigger__c.Novidea_HPC__Stop_Validation_Rule__c != True,
NOT(ISBLANK( Application_Pens__c )),
ISBLANK( Expected_Niud_Date__c ))</errorConditionFormula>
    <errorDisplayField>Expected_Niud_Date__c</errorDisplayField>
    <errorMessage>יש לבחור תאריך משוער לניוד</errorMessage>
</ValidationRule>