force-app/main/default/objects/Application_Deleted_Policies__c/validationRules/ApplicationPratCancelTypeIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ApplicationPratCancelTypeIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.Novidea_HPC__Trigger__c.Novidea_HPC__Stop_Validation_Rule__c != True,
ISNEW(),
NOT(ISBLANK(  Application__c )),
ISBLANK(TEXT( Cancel_Type__c )))</errorConditionFormula>
    <errorDisplayField>Cancel_Type__c</errorDisplayField>
    <errorMessage>חובה לציין את סוג הביטול</errorMessage>
</ValidationRule>