force-app/main/default/objects/Application_Deleted_Policies__c/validationRules/PolicyIsInternalOrExternal.validationRule-meta.xml
<ValidationRule>
    <fullName>PolicyIsInternalOrExternal</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.Novidea_HPC__Trigger__c.Novidea_HPC__Stop_Validation_Rule__c != True,
OR(
AND(
ISBLANK( Extern_Policy_To_Be_Deleted_Carrier__c),
ISBLANK( Extern_Policy_To_Be_Deleted_Number__c ),
ISBLANK ( Policy__c )),
AND(
NOT(ISBLANK (Extern_Policy_To_Be_Deleted_Carrier__c)),
ISBLANK (Extern_Policy_To_Be_Deleted_Number__c)),
AND(
ISBLANK (Extern_Policy_To_Be_Deleted_Carrier__c),
NOT(ISBLANK (Extern_Policy_To_Be_Deleted_Number__c))),
AND(
NOT(ISBLANK(Policy__c)),
OR(
NOT(ISBLANK(Extern_Policy_To_Be_Deleted_Number__c)),
NOT(ISBLANK(Extern_Policy_To_Be_Deleted_Carrier__c))))))</errorConditionFormula>
    <errorMessage>חובה לסמן פוליסה/קופה פנימית מהחיפוש, או בפוליסה/קופה חיצונית מספר פוליסה/קופה וחברת ביטוח</errorMessage>
</ValidationRule>