force-app/main/default/objects/Application_Deleted_Policies__c/listViews/EducationApplications_Application_Deleted_Policies.listView-meta.xml
<ListView>
    <fullName>EducationApplications_Application_Deleted_Policies</fullName>
    <filterScope>Queue</filterScope>
    <label>הצעות השתלמות</label>
    <queue>EducationApplications</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>