force-app/main/default/objects/Application_Deleted_Policies__c/listViews/ProvidentApp_Application_Deleted_Policies.listView-meta.xml
<ListView>
    <fullName>ProvidentApp_Application_Deleted_Policies</fullName>
    <filterScope>Queue</filterScope>
    <label>הצעות גמל</label>
    <queue>ProvidentApp</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>