force-app/main/default/objects/Application_Deleted_Policies__c/listViews/SalesLeadOperation_Application_Deleted_Policies.listView-meta.xml
<ListView>
    <fullName>SalesLeadOperation_Application_Deleted_Policies</fullName>
    <filterScope>Queue</filterScope>
    <label>לידים תפעול</label>
    <queue>SalesLeadOperation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>